# ComplexSystemSimulator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Parameter.hpp  Simulation.hpp  SimulationManager.cpp  SimulationManager.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  ParameterPanel.cpp  ParameterPanel.hpp  PlotWidget.cpp  PlotWidget.hpp
src/rendering/: SFMLWidget.cpp  SFMLWidget.hpp
src/simulations/: IsingSimulation.cpp  IsingSimulation.hpp  KuramotoSimulation.cpp  KuramotoSimulation.hpp  PercolationSimulation.cpp  PercolationSimulation.hpp  QuantSimulation.cpp  QuantSimulation.hpp
